<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/green">

    <TextView

        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="253dp"
        android:text="The following contains a series of a 12-question exam. You ready?"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold|italic" />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rdS1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/rd_s1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstans"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rd_s2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondans"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rd_s3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirdans"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rd_s4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourthans"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rd_s5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifthans"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="244dp"
        android:clickable="true"
        android:onClick="buttonClick"
        android:text="Button" />

</RelativeLayout>

